Re-organize after a run through.

--- a/why/01.md
+++ b/why/01.md
@@ -2,7 +2,7 @@
 
 # Git Ready
 
-Christopher Peplin
+Christopher Peplin (with help from Scott Chacon)
 
 !SLIDE
 
@@ -18,10 +18,6 @@ Why *not* use version control?
 stupid."
 
 !SLIDE
-
-# Two Problems
-
-.notes Tell story about elder programmer. Never be afraid to change.
 
 !SLIDE
 
